docs/1.0.2/_sources/tutorials/index.rst.txt
:orphan:

.. include:: ../references.txt

.. _tutorials:

=========
Tutorials
=========

**Notice :** it is
advised to first read :ref:`package_structure` of the User Guide before using the
tutorials.

This page lists the Gammapy tutorials that are available as `Jupyter`_ notebooks.
You can read them here, or execute them using a temporary cloud server in Binder.

To execute them locally, you have to first install Gammapy locally (see
:ref:`installation`) and download the tutorial notebooks and example datasets (see
:ref:`getting-started`). Once Gammapy is installed, remember that you can always
use ``gammapy info`` to check your setup.

Gammapy is a Python package built on `Numpy`_ and `Astropy`_, so to use it
effectively, you have to learn the basics. Many good free resources are
available, e.g. `A Whirlwind tour of Python`_, the `Python data science
handbook`_ and the `Astropy Hands-On Tutorial`_.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>

Introduction
============

The following three tutorials show different ways of how to use Gammapy to perform a complete data analysis,
from data selection to data reduction and finally modeling and fitting.

The first tutorial is an overview on how to perform a standard analysis workflow using the high level interface
in a configuration-driven approach, whilst the second deals with the same use-case using the low level API
and showing what is happening *under-the-hood*. The third tutorial shows a glimpse of how to handle different
basic data structures like event lists, source catalogs, sky maps, spectral models and flux points tables.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Introduction to 3D analysis using the Gammapy high level interface.">

.. only:: html

  .. image:: /tutorials/starting/images/thumb/sphx_glr_analysis_1_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_starting_analysis_1.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">High level interface</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Introduction to Gammapy analysis using the low level API.">

.. only:: html

  .. image:: /tutorials/starting/images/thumb/sphx_glr_analysis_2_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_starting_analysis_2.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Low level API</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Introduction to basic data structures handling.">

.. only:: html

  .. image:: /tutorials/starting/images/thumb/sphx_glr_overview_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_starting_overview.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Data structures</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/starting/analysis_1
   /tutorials/starting/analysis_2
   /tutorials/starting/overview

Data exploration
================

These three tutorials show how to perform data exploration with Gammapy, providing an introduction to the CTA,
H.E.S.S. and Fermi-LAT data and instrument response functions (IRFs). You will be able to explore and filter
event lists according to different criteria, as well as to get a quick look of the multidimensional IRFs files.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Access and inspect CTA data and instrument response functions (IRFs) using Gammapy.">

.. only:: html

  .. image:: /tutorials/data/images/thumb/sphx_glr_cta_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_data_cta.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">CTA with Gammapy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Data inspection and preliminary analysis with Fermi-LAT data.">

.. only:: html

  .. image:: /tutorials/data/images/thumb/sphx_glr_fermi_lat_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_data_fermi_lat.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fermi-LAT with Gammapy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="H.E.S.S. is an array of gamma-ray telescopes located in Namibia. Gammapy is regularly used and ...">

.. only:: html

  .. image:: /tutorials/data/images/thumb/sphx_glr_hess_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_data_hess.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">H.E.S.S. with Gammapy</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/data/cta
   /tutorials/data/fermi_lat
   /tutorials/data/hess

Data analysis
=============

The following set of tutorials are devoted to data analysis, and grouped according to the specific covered use
cases in spectral analysis and flux fitting, image and cube analysis modelling and fitting, as well as
time-dependent analysis with light-curves.

1D Spectral
-----------


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate the CTA sensitivity for a point-like IRF at a fixed zenith angle and fixed offset.">

.. only:: html

  .. image:: /tutorials/analysis-1d/images/thumb/sphx_glr_cta_sensitivity_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-1d_cta_sensitivity.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Point source sensitivity</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Perform a spectral analysis of an extended source.">

.. only:: html

  .. image:: /tutorials/analysis-1d/images/thumb/sphx_glr_extended_source_spectral_analysis_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-1d_extended_source_spectral_analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Spectral analysis of extended sources</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit spectral models to combined Fermi-LAT and IACT flux points tables.">

.. only:: html

  .. image:: /tutorials/analysis-1d/images/thumb/sphx_glr_sed_fitting_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-1d_sed_fitting.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Flux point fitting</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Perform a full region based on-off spectral analysis and fit the resulting datasets.">

.. only:: html

  .. image:: /tutorials/analysis-1d/images/thumb/sphx_glr_spectral_analysis_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-1d_spectral_analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Spectral analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Introduction to 1D analysis using the Gammapy high level interface.">

.. only:: html

  .. image:: /tutorials/analysis-1d/images/thumb/sphx_glr_spectral_analysis_hli_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-1d_spectral_analysis_hli.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Spectral analysis with the HLI</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Perform a point like spectral analysis with energy dependent offset cut.">

.. only:: html

  .. image:: /tutorials/analysis-1d/images/thumb/sphx_glr_spectral_analysis_rad_max_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-1d_spectral_analysis_rad_max.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Spectral analysis with energy-dependent directional cuts</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simulate a number of spectral on-off observations of a source with a power-law spectral model u...">

.. only:: html

  .. image:: /tutorials/analysis-1d/images/thumb/sphx_glr_spectrum_simulation_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-1d_spectrum_simulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">1D spectrum simulation</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/analysis-1d/cta_sensitivity
   /tutorials/analysis-1d/extended_source_spectral_analysis
   /tutorials/analysis-1d/sed_fitting
   /tutorials/analysis-1d/spectral_analysis
   /tutorials/analysis-1d/spectral_analysis_hli
   /tutorials/analysis-1d/spectral_analysis_rad_max
   /tutorials/analysis-1d/spectrum_simulation

2D Image
--------


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Build a list of significant excesses in a Fermi-LAT map.">

.. only:: html

  .. image:: /tutorials/analysis-2d/images/thumb/sphx_glr_detect_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-2d_detect.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Source detection and significance maps</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Source modelling and fitting in stacked observations using the high level interface.">

.. only:: html

  .. image:: /tutorials/analysis-2d/images/thumb/sphx_glr_modeling_2D_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-2d_modeling_2D.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">2D map fitting</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create an excess (gamma-ray events) and a significance map extracting a ring background.">

.. only:: html

  .. image:: /tutorials/analysis-2d/images/thumb/sphx_glr_ring_background_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-2d_ring_background.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ring background map</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/analysis-2d/detect
   /tutorials/analysis-2d/modeling_2D
   /tutorials/analysis-2d/ring_background

3D Cube
-------


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Perform detailed 3D stacked and joint analysis.">

.. only:: html

  .. image:: /tutorials/analysis-3d/images/thumb/sphx_glr_analysis_3d_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-3d_analysis_3d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D detailed analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Joint 3D analysis using 3D Fermi datasets, a H.E.S.S. reduced spectrum and HAWC flux points.">

.. only:: html

  .. image:: /tutorials/analysis-3d/images/thumb/sphx_glr_analysis_mwl_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-3d_analysis_mwl.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi instrument joint 3D and 1D analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Detect sources, produce a sky image and a spectrum using CTA 1DC data.">

.. only:: html

  .. image:: /tutorials/analysis-3d/images/thumb/sphx_glr_cta_data_analysis_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-3d_cta_data_analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Basic image exploration and fitting</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Learn to sampling events from a given sky model and IRFs.">

.. only:: html

  .. image:: /tutorials/analysis-3d/images/thumb/sphx_glr_event_sampling_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-3d_event_sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Event sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Learn how to estimate flux profiles on a Fermi-LAT dataset.">

.. only:: html

  .. image:: /tutorials/analysis-3d/images/thumb/sphx_glr_flux_profiles_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-3d_flux_profiles.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Flux Profile Estimation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simulate a 3D observation of a source with the CTA 1DC response and fit it with the assumed sou...">

.. only:: html

  .. image:: /tutorials/analysis-3d/images/thumb/sphx_glr_simulate_3d_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-3d_simulate_3d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D map simulation</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/analysis-3d/analysis_3d
   /tutorials/analysis-3d/analysis_mwl
   /tutorials/analysis-3d/cta_data_analysis
   /tutorials/analysis-3d/event_sampling
   /tutorials/analysis-3d/flux_profiles
   /tutorials/analysis-3d/simulate_3d

Time
----


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute per-observation and nightly fluxes of four Crab nebula observations.">

.. only:: html

  .. image:: /tutorials/analysis-time/images/thumb/sphx_glr_light_curve_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-time_light_curve.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Light curves</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute the light curve of a PKS 2155-304 flare on 10 minutes time intervals.">

.. only:: html

  .. image:: /tutorials/analysis-time/images/thumb/sphx_glr_light_curve_flare_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-time_light_curve_flare.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Light curves for flares</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simulate and fit a time decaying light curve of a source using the CTA 1DC response.">

.. only:: html

  .. image:: /tutorials/analysis-time/images/thumb/sphx_glr_light_curve_simulation_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-time_light_curve_simulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simulating and fitting a time varying source</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Produce a phasogram, phased-resolved maps and spectra in pulsar analysis.">

.. only:: html

  .. image:: /tutorials/analysis-time/images/thumb/sphx_glr_pulsar_analysis_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-time_pulsar_analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Pulsar analysis</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/analysis-time/light_curve
   /tutorials/analysis-time/light_curve_flare
   /tutorials/analysis-time/light_curve_simulation
   /tutorials/analysis-time/pulsar_analysis

Package / API
=============

The following tutorials demonstrate different dimensions of the Gammapy API or
expose how to perform more specific use cases.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Convenience methods for dark matter high level analyses.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_astro_dark_matter_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_astro_dark_matter.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Dark matter spatial and spectral models</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Access and explore thew most common gamma-ray source catalogs.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_catalog_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_catalog.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Source catalogs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Learn how to work with datasets">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_datasets_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_datasets.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Datasets - Reduced data, IRFs, models</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Learn how the model, dataset and fit Gammapy classes work together in a detailed modeling and f...">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_fitting_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_fitting.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fitting</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Data reduction: from observations to binned datasets">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_makers_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_makers.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Makers - Data reduction</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A thorough tutorial to work with WCS maps.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_maps_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_maps.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maps</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create and apply masks maps.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_mask_maps_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_mask_maps.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mask maps</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Multiple datasets and models interaction in Gammapy.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_model_management_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_model_management.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modelling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The sub-package ~gammapy.modeling contains all the functionality related to modeling and fittin...">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_models_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_models.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Models</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/api/astro_dark_matter
   /tutorials/api/catalog
   /tutorials/api/datasets
   /tutorials/api/fitting
   /tutorials/api/makers
   /tutorials/api/maps
   /tutorials/api/mask_maps
   /tutorials/api/model_management
   /tutorials/api/models


Scripts
=======

For interactive use, IPython and Jupyter are great, and most Gammapy examples use those.
However, for long-running, non-interactive tasks like data reduction or survey maps,
you might prefer a Python script.

The following example shows how to run Gammapy within a Python script.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Make a survey counts map using a script.">

.. only:: html

  .. image:: /tutorials/scripts/images/thumb/sphx_glr_survey_map_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_scripts_survey_map.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Survey Map Script</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/scripts/survey_map


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: tutorials_python.zip </tutorials/tutorials_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: tutorials_jupyter.zip </tutorials/tutorials_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
